--- a/projeto/src/main/webapp/views/aluga/create.html
+++ b/projeto/src/main/webapp/views/aluga/create.html
@@ -54,7 +54,7 @@
             <form action="../../clientes-create" >
                 <fieldset>
                     <legend>
-                        Criar
+                        <h2 class="text-center">Criar</h2>
                     </legend>
                     <div class="form-group mb-3">
                         <label for="nome" class="form-label">
@@ -84,7 +84,7 @@
                 </fieldset>
             </form>
         </div>
-	</div>
+
 
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
