--- a/projeto/src/main/webapp/views/clientes/create.html
+++ b/projeto/src/main/webapp/views/clientes/create.html
@@ -85,7 +85,10 @@
             </form>
         </div>
 	</div>
+	
+	
 
+		<script src="../../js/script.js"></script>
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"></script>
